--- a/views/inicio.pug
+++ b/views/inicio.pug
@@ -1,7 +1,31 @@
 extends ./layout/index
 
+block slider
+    .slider
+        h1 Rio de Janeiro
+        em aventura
 
 block contenido 
     main.container.mt-5
-        .row
-            h1= pagina
+        h2.text-center.mb-5 sobre nosotros
+        .row.mb-5
+            .col-md-6 
+                p Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea deleniti quidem quas recusandae quibusdam corporis sed magni laudantium aut molestiae. Soluta laboriosam ex esse atque alias odit expedita debitis perspiciatis? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cupiditate mollitia pariatur.
+                p Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore ipsa laudantium nulla. Omnis ut magni eos laborum odit eum, libero necessitatibus eligendi amet sequi accusantium adipisicing elit incidunt sapiente, molestias temporibus ipsam?
+            .col-md-6
+                img(src="/img/inicio_nosotros.jpg", alt="Imagen inicio", class="img-fluid")
+        include ./layout/bloqueviajes
+
+    .descuento
+        .container
+            .row
+                .col-md-6
+                    .contenido
+                        h3 5% de Descuento
+                        p.titulo Viaje a Canada
+                        p.fecha 28 de abril de 2025 - 4 de mayo de 2025
+                        p.precio $2.500 USD
+           
+    .container
+        h2.text-center.mt-5 Testimoniales
+        include ./layout/bloquetestimoniales
